@@ -10,7 +10,7 @@ DEB_HOST_GNU_TYPE   ?= $(shell dpkg-architecture -qDEB_HOST_GNU_TYPE)
 DEB_BUILD_GNU_TYPE  ?= $(shell dpkg-architecture -qDEB_BUILD_GNU_TYPE)
 
 DISTRIBUTION := $(shell dpkg-parsechangelog --format rfc822 | sed -ne "s/^Distribution: //p")
-ifneq ($(DISTRIBUTION),$(findstring $(DISTRIBUTION),"lenny squeeze hardy intrepid jaunty karmic lucid maverick natty"))
+ifneq ($(DISTRIBUTION),$(findstring $(DISTRIBUTION),"lenny squeeze hardy intrepid jaunty karmic lucid maverick natty oneiric"))
 DISTRIBUTION := sid
 endif
 
@@ -32,11 +32,11 @@ CMAKE_OPTS := \
 	-D QGIS_CGIBIN_SUBDIR=/usr/lib/cgi-bin \
 	-D WITH_APIDOC=TRUE
 
-ifneq (,$(findstring $(DISTRIBUTION),"natty"))
+ifneq (,$(findstring $(DISTRIBUTION),"natty oneiric"))
 	CMAKE_OPTS += -D QT_QTWEBKIT_INCLUDE_DIR=/usr/include/QtWebKit
 endif
 
-#ifeq (,$(findstring $(DISTRIBUTION),"squeeze lucid maverick natty sid"))
+#ifeq (,$(findstring $(DISTRIBUTION),"squeeze lucid maverick natty oneiric sid"))
 	CMAKE_OPTS += -D WITH_INTERNAL_SPATIALITE=TRUE
 #else
 #	CMAKE_OPTS += -D WITH_INTERNAL_SPATIALITE=FALSE
